# financial-document-analyzer

./: .env.example  .gitignore  README.md  agents.py  main.py  mongodb.py  pyproject.toml  requirements.txt  support.txt  task.py  tools.py
src/: crew.py
src/config/: agents.yaml  tasks.yaml
src/tools/: custom_tool.py
tests/: pdf_rag.py
