[project]
name = "financial_document_analyser"
version = "0.1.0"
description = "financial-document-analyser using crewAI"
authors = [{ name = "Tushar Soni", email = "tusharsoni.info@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
financial_document_analyser = "financial_document_analyser.main:run"
run_crew = "financial_document_analyser.main:run"
train = "financial_document_analyser.main:train"
replay = "financial_document_analyser.main:replay"
test = "financial_document_analyser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"